--- a/src/index.css
+++ b/src/index.css
@@ -54,7 +54,7 @@ textarea:focus {
 }
 
 .note {
-  background-color: #fef68a;
+  background-color: #c7f9cc;
   border-radius: 10px;
   padding: 1rem;
   min-height: 170px;
